--- a/scss/sections/_intro-section.scss
+++ b/scss/sections/_intro-section.scss
@@ -1,5 +1,5 @@
-@use "../custom" as *;
-@use "../components/mixins" as *;
+@use '../custom' as *;
+@use '../components/mixins' as *;
 
 .intro-section {
     @include gradient;
@@ -9,16 +9,23 @@
 }
 
 .intros {
+
+
     .video-box {
         position: relative;
 
+
         a {
-            @include absoluteCenter;
+            // @include absoluteCenter;
 
             span {
+
+
                 i {
+
                     font-size: 6rem;
                     color: $secondary;
+
                 }
             }
         }
@@ -33,12 +40,12 @@
     height: 6rem;
     border: 0.55rem solid $white;
     border-radius: 50%;
-    animation: pulse-border 3s linear infinite;
+    animation: pulse-border 1.5s linear infinite;
+
     &--border-1 {
         animation-delay: 1s;
     }
     &--border-2 {
         animation-delay: 1.5s;
     }
-
 }
