--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,14 +1,24 @@
-@use "../custom" as *;
-@use "../components/mixins" as *;
+@use '../custom' as *;
+@use '../components/mixins' as *;
 
 .menu {
     @include gradient;
+
+
     li {
+      padding: 0 0.7rem;
+
+      a {
+        color: $white;
         padding: 0 0.7rem;
-        a {
-            color: $white !important;
-            text-transform: capitalize; // 첫글자 대문자로 바꾸기
-            font-weight: 600;
-        }
+        text-transform: capitalize;
+        font-weight: 600;      
+
+      }
+      &:hover {
+        color: $white;
+      }
+  
     }
+    
 }
