--- a/scss/sections/_campanies.scss
+++ b/scss/sections/_campanies.scss
@@ -17,4 +17,11 @@
             }
         }
     }
+
+    .center-block {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
 }
